fixed overlay and one pixel wrong jump

--- a/Assessments.Frontend.Web/wwwroot/css/listview.css
+++ b/Assessments.Frontend.Web/wwwroot/css/listview.css
@@ -397,7 +397,7 @@ li a span.element_icon {
 
 .infographics {
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     border-radius: 2px;
     font-size: 20px;
     display: flex;
