--- a/Assessments.Frontend.Web/wwwroot/css/search.css
+++ b/Assessments.Frontend.Web/wwwroot/css/search.css
@@ -14,7 +14,7 @@
     border-radius: 2px;
     border-top: 1px solid lightgray;
     padding-top: 20px;
-    background-image: linear-gradient(#f9f7f7, white);
+    background-image: linear-gradient(#f9f9f9, white);
 }
 
 @media only screen and (min-width: 750px) {
